--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-materialize": "^2.1.4",
     "react-scripts": "1.1.4"
   },
   "scripts": {
